ADD: crud feature

--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -28,6 +28,10 @@ body {
     color: #f1f1f1;
 }
 
+.sidenav .active{
+    color: #f1f1f1;
+}
+
 .sidenav .closebtn {
     position: absolute;
     top: 0;
